--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,243 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  /* border: 1px #fff solid; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  position: fixed;
+  top: 0;
+  right: 7px;
+  left: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: end;
+  padding: 10px;
+  border-bottom: solid 2px #1f2937;
+  color: #fff;
+  z-index: 20;
+  background: rgba(255, 255, 255, 0);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.2px);
+  -webkit-backdrop-filter: blur(10.2px);
+}
+
+nav div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  width: 30vw;
+  margin-right: 20px;
+}
+
+
+#tsparticles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+
+.App {
+  height: 100dvh;
+  width: 100dvw;
+  overflow-x: hidden;
+}
+
+.App::-webkit-scrollbar {
+  width: 7px;
+}
+
+.App::-webkit-scrollbar-track {
+  border-radius: 8px;
+  background-color: #e7e7e7;
+  border: 1px solid #cacaca;
+}
+
+.App::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+  background: #00F0FF;
+  background: linear-gradient(0deg, rgba(0, 240, 255, 1) 0%, rgba(0, 255, 157, 1) 100%);
+}
+
+/* hero section */
+
+.hero {
+  display: flex;
+  height: 60dvh;
+  justify-content: space-evenly;
+  align-items: center;
+  color: #fff;
+  position: relative;
+  background-color: #000;
+}
+
+.titleDiv {
+  max-width: 40%;
+  z-index: 2;
+  position: relative;
+}
+
+.textAnimContainer {
+  position: absolute;
+  bottom: -50px;
+  font-size: 1.5rem;
+  font-family: "Ubuntu Sans Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.textAnimContainer h3 {
+  border-right: #fff solid 1px;
+  padding-right: 3px;
+  animation-duration: 1s;
+  animation-name: blink;
+  animation-iteration-count: infinite;
+}
+
+.hero h1 {
+  font-size: 3.75rem;
+}
+
+.hero h1 span {
+  color: #00f0ff;
+  background-image: linear-gradient(45deg, #00f0ff, #00ff9d 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+}
+
+.circleDiv {
+  position: relative;
+  z-index: 2;
+}
+
+.circle {
+  height: 14vw;
+  width: 14vw;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 360px;
+  background-color: #111827;
+  border: solid #1f2937 1px;
+  box-shadow: 0px 0px 100px -30px rgba(0, 240, 255, 0.75);
+  -webkit-box-shadow: 0px 0px 100px -30px rgba(0, 240, 255, 0.75);
+  -moz-box-shadow: 0px 0px 100px -30px rgba(0, 240, 255, 0.75);
 }
 
-.App-link {
-  color: #61dafb;
+.insideCircleDiv {
+  height: 50%;
+  width: 80%;
+  background-color: #1f2937;
+  border-radius: 360px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes blink {
+  0% {
+    border: none;
   }
-  to {
-    transform: rotate(360deg);
+
+  50% {
+    border-right: #fff solid 1px;
   }
+
+  100% {
+    border: none;
+  }
+}
+
+/* about me */
+
+.abtMe {
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.abtMe_title {
+  color: #fff;
+  font-size: 1.75rem;
+}
+
+.abtMe .line {
+  width: 5rem;
+  height: .25rem;
+  margin-top: 10px;
+  background: #00F0FF;
+  background: linear-gradient(90deg, rgba(0, 240, 255, 1) 0%, rgba(0, 255, 157, 1) 100%);
+}
+
+.abtMe_title span {
+  color: #00f0ff;
+}
+
+.abtMe_cont {
+  display: flex;
+  /* background-color: red; */
+  gap: 20px;
+  width: 98%;
+  color: #fff;
+}
+
+
+
+.card {
+  background-color: #1f2937;
+  padding: 1rem 2rem;
+  border: 1px #1f2937 solid;
+  border-radius: .75rem;
+  transition: .15s;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: #374151 1px solid
+}
+
+.abtMe_para {
+  max-width: 50%;
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.abtMe_det {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 9px;
+
+}
+
+.abtMe_card:hover {
+  border: #00F0FF 1px solid
+}
+
+/* skill */
+
+.skill_det {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  gap: 9px;
+  width: 98%;
+  color: #fff;
+}
+
+.skillEnum {
+  display: flex;
+  justify-content: space-evenly;
+  /* background-color: #00F0FF; */
 }
